# sm64coopdx_launcher

./: .gitignore  Cargo.toml  LICENSE  README.md  manual-launcher.md
src/: assets.rs  config.rs  error.rs  game.rs  main.rs
src/managers/: download_manager.rs  dynos_manager.rs  mod.rs  mod_manager.rs  network_manager.rs  profile_manager.rs
src/ui/: common.rs  download_browser.rs  keyboard.rs  logo.rs  menu.rs  mod.rs  network_form.rs  panel.rs  splash.rs  vinyl.rs
